# proglog-rs

./: .commitlintrc.js  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  claude-context.md  justfile  notes.md
.github/: dependabot.yml
.github/workflows/: rust.yml
examples/: client.rs
proto/: log.proto
src/: errors.rs  lib.rs  main.rs
src/server/: grpc.rs
src/storage/: index.rs  log.rs  mod.rs  segment.rs  store.rs  traits.rs
tests/: storage_integration.rs
