[package]
name = "proglog-rs"
version = "0.1.0"
edition = "2024"

[dependencies]

# gRPC dependencies
tonic = "0.14"
prost = "0.14.1"
prost-types = "0.14"
tonic-prost = "0.14"

anyhow = "1.0.98"
bincode = "2.0.1"
memmap2 = "0.9.7"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.20.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
log = "0.4.29"

[build-dependencies]
tonic-prost-build = "0.14"
prost-build = "0.14"


[dev-dependencies]
criterion = "0.7.0"
